src/tests/krate/publish/snapshots/all__krate__publish__features__empty_feature_name.snap
---
source: src/tests/krate/publish/features.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "feature cannot be an empty"
    }
  ]
}
