src/tests/krate/publish/snapshots/all__krate__publish__features__invalid_feature.snap
---
source: src/tests/krate/publish/features.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "\"!bar\" is an invalid feature name"
    }
  ]
}
