src/tests/krate/publish/snapshots/all__krate__publish__features__invalid_feature_name.snap
---
source: src/tests/krate/publish/features.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid upload request: invalid value: string \"~foo\", expected a valid feature name containing only letters, numbers, '-', '+', or '_' at line 1 column 57"
    }
  ]
}
