src/tests/krate/publish/snapshots/all__krate__publish__features__invalid_feature_name2.snap
---
source: src/tests/krate/publish/features.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid character `!` in feature `!bar`, the first character must be a Unicode XID start character or digit (most letters or `_` or `0` to `9`)"
    }
  ]
}
