src/tests/krate/publish/snapshots/all__krate__publish__features__invalid_feature_name_start_with_hyphen.snap
---
source: src/tests/krate/publish/features.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid character `-` in feature `-foo1.bar`, the first character must be a Unicode XID start character or digit (most letters or `_` or `0` to `9`)"
    }
  ]
}
