src/tests/krate/publish/snapshots/all__krate__publish__features__too_many_enabled_features.snap
---
source: src/tests/krate/publish/features.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "Maximum number of enabled features was reached for feature \"default\" (uploaded: 5, limit: 3)"
    }
  ]
}
